--- a/home.css
+++ b/home.css
@@ -1,20 +1,52 @@
 .top {
-    margin-left: 15px;
-    margin-right: 15px;
+    margin: 5px, 0;
     align-self: center;
+    width: 100%;
+    box-sizing: border-box;
 }
-/*Triggers for tablet sized screens*/
+.main{
+    margin: 5px, 0;
+    box-sizing: border-box;
+    width: 100%;
+    height: auto;
+    font-size: 0;
+}
+.width-1{width: 100%}
+.width-2{width: 100%}
+.width-3{width: 100%}
+.width-4{width: 100%}
+/*specifically not phone stuff*/
+@media only screen and (min-width: 500px){
+    .width-1{width: 25%}
+    .width-2{width: 50%}
+    .width-3{width: 75%}
+    .width-4{width: 100%}
+    .main{
+        margin: 0 2.5%;
+        width: 95%;
+    }
+}
+[class*="width-"] {
+    box-sizing: border-box; 
+    display: inline-block;
+    background-color: gray;
+    font-size: 1rem;
+}
+/*Triggers for tablet sized screens only*/
 @media only screen and (min-width: 500px) and (max-width: 800px){
     .top {
-        margin-left: 10%;
-        margin-right: 10%;
+        margin-left: 2.5%;
+        margin-right: 2.5%;
+        width: 95%;
     }
+
 }
 /*Triggers for laptops and above*/
 @media only screen and (min-width: 800px){
     .top {
-        margin-left: 10%;
-        margin-right: 10%;
+        margin-left: 5%;
+        margin-right: 5%;
+        width: 90%;
     }
 }
 
