--- a/home.css
+++ b/home.css
@@ -4,12 +4,28 @@
     width: 100%;
     box-sizing: border-box;
 }
-
+.nav{
+    margin: 1px 0;
+    box-sizing: border-box;
+    width: 100%;
+    font-size: 0;
+}
+ul{
+    list-style: none;
+    box-sizing: border-box;
+    padding: 0;
+}
+li{
+    font-size: 1rem;
+    box-sizing: border-box;
+    display: inline-block;
+    width: 25%;
+}
 h2{
     font-size: 1.3em;
 }
 .main{
-    margin: 5px, 0;
+    margin: 5px 0;
     box-sizing: border-box;
     width: 100%;
     height: auto;
@@ -30,6 +46,10 @@ h2{
     .main{
         margin: 0 2.5%;
         width: 95%;
+    }
+    .nav{
+        width: 65%;
+        margin: 0 2.5%;
     }
     .top {
         margin-left: 2.5%;
