--- a/home.css
+++ b/home.css
@@ -1,44 +1,31 @@
 *{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
 body{
     background-color: #333333;
+    margin: 0;
 }
 .top {
     padding: 0 5px;
     margin: 0;
     align-self: center;
     width: 100%;
-    box-sizing: border-box;
     background-color: #555555;
     border: 1px solid white;
     border-bottom: 0;
 }
+a{
+    text-decoration: none;
+}
 .nav {
     margin-bottom: 20px;
     width: 100%;
-    box-sizing: border-box;
     background-color: #555555;
     border: 1px solid white;
-    padding: 5px 0;
-}
-.nav ul{
-    
-    height:100%;
-    list-style: none;
-    box-sizing: border-box;
-    padding: 0;
+    height: 30px;
     font-size: 0;
-    text-align: center;
-}
-li.navComp {
-    vertical-align: middle;
-    height:100%;
-    font-size: 1rem;
-    box-sizing: border-box;
-    display: inline-block;
-    width: 25%;
 }
 h2{
     font-size: 1.3em;
@@ -46,7 +33,7 @@ h2{
     padding: 5px 0;
 }
 .main{
-    box-sizing: border-box;
+     
     width: 100%;
     height: auto;
     font-size: 0;
@@ -79,23 +66,46 @@ h2{
     }
 }
 [class*="width-"] {
-    box-sizing: border-box; 
+      
     display: inline-block;
     background-color: #777777;
     font-size: 1rem;
     border-bottom: 1px solid white;
     border-left: 1px solid white;
+    text-align: center;
+}
+.navComp {
+    vertical-align: middle;
+    font-size: 1rem;
+    display: inline-block;
+    width: 25%;
+    border: 0;
+    border-right: 1px solid white;
+    background-color: #555555;
+    height:100%;
+    line-height: 30px;
+}
+.navComp:hover{
+    cursor: pointer;
+    text-decoration: underline;
 }
 /*Triggers for tablet sized screens only*/
-@media only screen and (min-width: 500px) and (max-width: 800px){
+@media only screen and (min-width: 500px) and (max-width: 1000px){
 
 
 }
 /*Triggers for laptops and above*/
-@media only screen and (min-width: 800px){
-
-}
-
-body{
-    margin:0px;
+@media only screen and (min-width: 1000px){
+    .main{
+        margin: 0 15%;
+        width: 70%;
+    }
+    .top{
+        margin: 0 15%;
+        width: 70%;
+    }
+    .nav{
+        margin: 0 15% 20px;
+        width: 70%;
+    }
 }
