--- a/home.css
+++ b/home.css
@@ -17,7 +17,9 @@ body{
     text-align: center;
 }
 a{
+    display: block;
     text-decoration: none;
+    height:100%;
 }
 .nav {
     width: 100%;
@@ -35,20 +37,16 @@ h2{
     margin: 0;
     padding: 10px;
 }
-.main{
-     
+.main{   
     width: 100%;
     height: auto;
     font-size: 0;
-    border-top: 1px solid white;
-    border-right: 1px solid white;
+    padding: 10px 0;
+    background-color: maroon;
 }
 [class*="width-"] {
     display: inline-block;
-    background-color: maroon;
     font-size: 1rem;
-    border-bottom: 1px solid white;
-    border-left: 1px solid white;
     text-align: center;
     width: 100%;
 }
@@ -87,5 +85,11 @@ h2{
 @media only screen and (min-width: 1000px){
     .nav{
         padding: 0 15%;
+    }
+    .top{
+        font-size: 1.5em;
+    }
+    .main{ 
+        padding: 10px 15%;
     }
 }
