--- a/home.css
+++ b/home.css
@@ -21,6 +21,9 @@ a{
     text-decoration: none;
     height:100%;
 }
+a:hover{
+    text-decoration: underline;
+}
 .nav {
     width: 100%;
     background-color: red;
